# AddressFormattingPipeline

./: .gitignore  README.md  pyproject.toml  requirements.txt
src/llm_formating/: llm_format.py  system_prompt.py
src/post_formating/: post_format_1.py  post_format_2.py  post_format_3.py  post_format_4.py  post_format_5.py  post_format_6.py  post_format_7.py
src/pre_formating/: pre_format_1.py  pre_format_2.py  pre_format_3.py
