[project]
name = "addressformattingpipeline"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langchain-core>=0.3.51",
    "langchain-openai>=0.3.12",
    "pandas>=2.2.3",
    "python-dotenv>=1.1.0",
    "regex>=2024.11.6",
]
